# crptb2

./: .markdownlint.yaml  CHANGELOG.md  README.md  hello.py  pyproject.toml
src/: config.py  historical_data.py  indicators.py  main.py
src/config/: config.py  config.yaml
src/exchanges/: bybit.py  exchange.py  my_exchange.py
src/strategy/: base_strategy.py
src/utils/: discord.py  logger.py  pnl_tracker.py  time_utils.py
test/: config_for_test.py
test/unit/: test_debug.py  test_indicators.py
test/unit/exchanges/: test_exchange.py
