[project]
name = "crptb2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.4.25",
    "matplotlib>=3.9.2",
    "mplfinance>=0.12.10b0",
    "numpy==1.26.4", # ta-libがnumpy ver2以上をサポートしないためver1の最新を指定
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "ruff>=0.7.1",
    "ta-lib>=0.4.32",
]

[tool.ruff]
# E402: Module level import not at top of file
ignore = ["E402"]
